[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cytosoftware-rpq"
version = "1.0.0"
description = "CytoSoftware-RPQ: segmentation-free red particle quantification in MP4 microscopy videos."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pandas",
  "opencv-python-headless",
  "scikit-image",
  "tqdm",
  "matplotlib",
]

[project.optional-dependencies]
notebook = ["ipywidgets", "scipy"]

[project.scripts]
rpq = "rpq.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
